# rofi-json-dict

./: CMakeLists.txt  Makefile.am  PKGBUILD  README.md  configure.ac  convert-dict
src/: jsondict.c
